Clarify serial new collector.